[gd_scene load_steps=8 format=3 uid="uid://ckj04xs2msl6r"]

[ext_resource type="Script" uid="uid://dmw7ead88nmeq" path="res://scenes/level1/level1.gd" id="1_eugj0"]
[ext_resource type="Texture2D" uid="uid://cwkef68xdo8re" path="res://assets/lablinebutton.png" id="2_qixek"]
[ext_resource type="Texture2D" uid="uid://5u0piiwxbmnf" path="res://assets/atomassemblerbutton.png" id="3_edbe2"]
[ext_resource type="Texture2D" uid="uid://dtjfdp6w0e6er" path="res://assets/moleculemakerbutton.png" id="4_38deu"]
[ext_resource type="Texture2D" uid="uid://ctws2l08xrejc" path="res://assets/lockedmoleculemakerbutton.png" id="5_dyap8"]
[ext_resource type="Texture2D" uid="uid://dngr27uxrpljs" path="res://assets/synthesisstationbutton.png" id="6_3k3ue"]
[ext_resource type="Texture2D" uid="uid://l6sdjb48o1g8" path="res://assets/lockedsynthesisstationbutton.png" id="7_2xkkt"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_eugj0")

[node name="StageContainer" type="Node" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="LabLineButton" type="TextureButton" parent="UILayer"]
offset_left = 32.0
offset_top = 568.0
offset_right = 326.0
offset_bottom = 707.0
texture_normal = ExtResource("2_qixek")

[node name="AtomAssemblerButton" type="TextureButton" parent="UILayer"]
offset_left = 344.0
offset_top = 568.0
offset_right = 632.0
offset_bottom = 699.0
texture_normal = ExtResource("3_edbe2")

[node name="MoleculeMakerButton" type="TextureButton" parent="UILayer"]
offset_left = 656.0
offset_top = 568.0
offset_right = 931.0
offset_bottom = 697.0
disabled = true
texture_normal = ExtResource("4_38deu")
texture_disabled = ExtResource("5_dyap8")

[node name="SynthesisStationButton" type="TextureButton" parent="UILayer"]
offset_left = 952.0
offset_top = 568.0
offset_right = 1258.0
offset_bottom = 696.0
disabled = true
texture_normal = ExtResource("6_3k3ue")
texture_disabled = ExtResource("7_2xkkt")
